Modified: Practice use Collectors.